<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_10"
    tools:context="com.techintegrity.trolleypress.in.techintegrity.trolleypress.ActivityThank">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <in.mapbazar.mapbazar.View.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:text="@string/thank"
            android:textColor="@color/black"
            android:textSize="@dimen/font_22"
            app:fontName="@string/ubuntu_m" />

        <in.mapbazar.mapbazar.View.CustomTextView
            android:id="@+id/txt_thank_orderid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:text="@string/thank_order_id"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:fontName="@string/ubuntu_r" />

        <in.mapbazar.mapbazar.View.CustomTextView
            android:id="@+id/txt_thank_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank_phone"
             android:layout_marginTop="@dimen/dialog_margin_10"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:fontName="@string/ubuntu_r" />

        <in.mapbazar.mapbazar.View.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:text="@string/thank1"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:fontName="@string/ubuntu_r" />

        <in.mapbazar.mapbazar.View.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_25"
            android:text="@string/thank2"
            android:textColor="@color/black"
            android:textSize="@dimen/font_16"
            app:fontName="@string/ubuntu_r" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <in.mapbazar.mapbazar.View.CustomTextView
            android:id="@+id/txt_view_order_history"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_10"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/view_order_history"
            android:textColor="@color/white_100"
            android:textSize="@dimen/font_18"
            app:fontName="@string/ubuntu_m" />

        <in.mapbazar.mapbazar.View.CustomTextView
            android:id="@+id/txt_go_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_50"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@color/green"
            android:gravity="center"
            android:text="@string/go_home"
            android:textColor="@color/white_100"
            android:textSize="@dimen/font_18"
            app:fontName="@string/ubuntu_m" />
    </LinearLayout>

</LinearLayout>
