<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <in.mapbazar.mapbazar.View.ThirdScreenView1
        android:id="@+id/round_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <!-- android:layout_width="@dimen/dimen_120"
     android:layout_height="@dimen/dimen_230"-->

    <ImageView
        android:id="@+id/center_box_third1"
        android:layout_width="@dimen/slide_center_image_size_width"
        android:layout_height="@dimen/slide_center_image_size_height"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/slide_center_image_bottom"
        android:layout_marginTop="@dimen/slide_center_image_top"
        android:src="@drawable/bag" />


    <in.mapbazar.mapbazar.View.CustomTextView
        android:id="@+id/title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/desc_text"
        android:layout_centerHorizontal="true"
        android:text="@string/Discover"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_size_text"
        app:fontName="@string/ubuntu_b"/>


    <in.mapbazar.mapbazar.View.CustomTextView
        android:id="@+id/desc_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="@dimen/slide_margin_15"
        android:layout_marginRight="@dimen/slide_margin_15"
        android:layout_marginTop="@dimen/slide_margin_15"
        android:gravity="center"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/Discover_dasc"
        android:textColor="@android:color/white"
        android:textSize="@dimen/slide_size_subtext"
        app:fontName="@string/ubuntu_l"/>


</RelativeLayout>