<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.techintegrity.trolleypress.in.techintegrity.trolleypress.ActivityAddressList">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_50"
        android:background="@color/colorPrimary">

        <RelativeLayout
            android:id="@+id/ly_back"
            android:layout_width="@dimen/height_50"
            android:layout_height="match_parent"
            android:padding="@dimen/margin_5">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left_arrow" />

        </RelativeLayout>

        <in.mapbazar.mapbazar.View.CustomTextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/select_address"
            android:textColor="@color/white_100"
            android:textSize="@dimen/font_17"
            app:fontName="@string/ubuntu_m" />

        <RelativeLayout
            android:id="@+id/ly_address"
            android:layout_width="@dimen/height_55"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="@dimen/margin_12">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add_icon" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bgcolor2"
        android:orientation="vertical">

        <in.mapbazar.mapbazar.View.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:text="@string/select_deli_address"
            android:textColor="@color/black_gray"
            android:textSize="@dimen/font_16"
            app:fontName="@string/ubuntu_m" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/address_recycler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:scrollbars="vertical" />

    </LinearLayout>


</LinearLayout>
